kqed_dev4/src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>payment_frequency__c</fullName>
        <label>Payment Frequency DELETE</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Irregular Schedule</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>payment_method__c</fullName>
        <label>Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complimentary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic Funds Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Kind Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mutual fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PayPal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payroll Deduction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carte Blanche</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diner&apos;s Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generic Charge Card - No CC# Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mastercard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Money Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Dated Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To Be Billed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Kind</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>payment_number__c</fullName>
        <label>Installment Number</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>payments_in_schedule__c</fullName>
        <description>Payments In Schedule</description>
        <inlineHelpText>Payments In Schedule</inlineHelpText>
        <label>Payments In Schedule</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pledge_amount__c</fullName>
        <description>Pledge Amount</description>
        <inlineHelpText>Pledge Amount</inlineHelpText>
        <label>Pledge Amt Delete</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pledge_number__c</fullName>
        <description>Pledge Number</description>
        <inlineHelpText>Pledge Number</inlineHelpText>
        <label>TA Pledge Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>program__c</fullName>
        <label>Program</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_del__c</fullName>
        <label>TA Project</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>purpose__c</fullName>
        <label>TA Purpose</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>schedule_start_date__c</fullName>
        <description>Schedule Start Date</description>
        <inlineHelpText>Schedule Start Date</inlineHelpText>
        <label>Schedule Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>source__c</fullName>
        <label>TA Source Code</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>systemHouseholdContactRoleProcessor__c</fullName>
        <inlineHelpText>Controls if Household contact roles are created for Opportunities</inlineHelpText>
        <label>_SYSTEM: HOUSEHOLD CONTACT ROLEPROCESSOR</label>
        <picklist>
            <picklistValues>
                <fullName>All Opportunities</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No Opportunities</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ta_campaign__c</fullName>
        <label>TA Campaign</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ta_campaign_value__c</fullName>
        <label>TA Campaign Value</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ta_opportunity_id__c</fullName>
        <description>External ID for one-time data load.  It will be deleted after data load.</description>
        <externalId>true</externalId>
        <label>TA Opportunity ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All_Proposal_Pledges</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>source__c</columns>
        <columns>OPPORTUNITY.FISCAL_PERIOD</columns>
        <columns>OPPORTUNITY.FISCAL_YEAR</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
        <columns>project_del__c</columns>
        <columns>OPPORTUNITY.FISCAL_QUARTER</columns>
        <filterScope>Everything</filterScope>
        <label>All Proposal/Pledges</label>
    </listViews>
    <listViews>
        <fullName>ClosedWon</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.AMOUNT</field>
            <operation>equals</operation>
            <value>25</value>
        </filters>
        <label>Closed Won</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>Ready_to_Ship</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Inventory_Status__c</columns>
        <columns>Shipment_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Inventory_Status__c</field>
            <operation>equals</operation>
            <value>Available,Partially Available</value>
        </filters>
        <filters>
            <field>Shipment_Status__c</field>
            <operation>equals</operation>
            <value>Not Shipped,Partially Shipped</value>
        </filters>
        <label>Ready to Ship</label>
    </listViews>
    <listViews>
        <fullName>Test</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>SAFWAN</value>
        </filters>
        <label>Test</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>Annual</fullName>
        <active>true</active>
        <businessProcess>Annual Process</businessProcess>
        <description>Annual Membership donations</description>
        <label>Annual</label>
    </recordTypes>
    <recordTypes>
        <fullName>Annual_Installment</fullName>
        <active>true</active>
        <businessProcess>Annual Process</businessProcess>
        <description>Annual Membership donations - installments</description>
        <label>Annual - Installment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Corporate_Support</fullName>
        <active>true</active>
        <businessProcess>Corp Support Process</businessProcess>
        <label>Corporate Support</label>
    </recordTypes>
    <recordTypes>
        <fullName>Donation</fullName>
        <active>true</active>
        <businessProcess>Donation Process</businessProcess>
        <description>Donation to non-Annual programs (Capital Campaign, Restricted Giving, Planned Giving, Foundation Giving, Matching Gifts, Underwriting, etc.)</description>
        <label>Donation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Donation_Installment</fullName>
        <active>true</active>
        <businessProcess>Donation Process</businessProcess>
        <description>Donation to non-Annual programs (Capital Campaign, Restricted Giving, Planned Giving, Foundation Giving, Matching Gifts, Underwriting, etc.) - Installments</description>
        <label>Donation - Installment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Inkind</fullName>
        <active>true</active>
        <businessProcess>Inkind Process</businessProcess>
        <description>Business Member Partners, Auction Donations</description>
        <label>Inkind</label>
    </recordTypes>
    <recordTypes>
        <fullName>Inkind_Installment</fullName>
        <active>true</active>
        <businessProcess>Inkind Process</businessProcess>
        <description>Business Member Partners, Auction Donations - Installments</description>
        <label>Inkind - Installment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Major_Gifts</fullName>
        <active>true</active>
        <businessProcess>Moves Management</businessProcess>
        <description>Moves Management</description>
        <label>Major Gifts</label>
    </recordTypes>
    <recordTypes>
        <fullName>Purchase</fullName>
        <active>true</active>
        <businessProcess>Purchase Process</businessProcess>
        <description>Purchase of goods (tickets, merchandise) that does not result in an Annual Membership</description>
        <label>Purchase</label>
    </recordTypes>
    <recordTypes>
        <fullName>Purchase_Installment</fullName>
        <active>true</active>
        <businessProcess>Purchase Process</businessProcess>
        <description>Purchase of goods (tickets, merchandise) that does not result in an Annual Membership - Installments</description>
        <label>Purchase - Installment</label>
    </recordTypes>
    <validationRules>
        <fullName>RuleNumbersOnly</fullName>
        <active>true</active>
        <description>Only numbers allowed, no commas.</description>
        <errorConditionFormula>NOT( ISBLANK( pledge_number__c ) || ( ISNUMBER( pledge_number__c ) &amp;&amp; LEN( pledge_number__c ) &lt;= 15 ) )</errorConditionFormula>
        <errorDisplayField>pledge_number__c</errorDisplayField>
        <errorMessage>Please enter numbers only, without commas.</errorMessage>
    </validationRules>
</CustomObject>